Add /log rewrite rule for sync log page

--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
     {
       "source": "/index-apex.html",
       "destination": "/index-apex.html"
+    },
+    {
+      "source": "/log",
+      "destination": "/log.html"
     }
   ]
 }
