--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "traffic-dashboard",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:prod": "PLAYWRIGHT_BASE_URL=https://traffic-dashboard-theta.vercel.app playwright test --grep-invert @local-only",
+    "test:all": "npm test && npm run test:e2e",
+    "dev": "python3 -m http.server 3000"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0"
   },
   "devDependencies": {
-    "vercel": "^50.5.0"
+    "@aws-sdk/client-cloudwatch-logs": "^3.975.0",
+    "@aws-sdk/client-eventbridge": "^3.975.0",
+    "@aws-sdk/client-lambda": "^3.975.0",
+    "@playwright/test": "^1.49.0",
+    "googleapis": "^170.1.0",
+    "papaparse": "^5.5.3",
+    "vercel": "^50.5.0",
+    "vitest": "^2.1.0"
   }
 }
