Add authentication setup for production E2E testing
- tests/auth.setup.js: Script to save login session
- playwright.config.js: Use saved auth state for prod tests
- package.json: Add test:e2e:auth script
- .gitignore: Exclude .auth/ directory (contains cookies)

Usage:
1. Run: npm run test:e2e:auth
2. Log in with Google in the browser
3. Session saved to .auth/user.json
4. Run: npm run test:e2e:prod (uses saved session)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ node_modules/
 *.log
 .vercel
 .env*.local
+
+# Playwright auth state (contains session cookies - never commit!)
+.auth/
+
+# Playwright test artifacts
+test-results/
+playwright-report/
