Add test bypass token for E2E testing (replaces OAuth-based auth)
1. Created api/lib/auth.js with isAuthenticated() utility:
   - Checks OAuth session cookie first
   - Falls back to X-Test-Token header for E2E tests
   - Secure: token validated against E2E_TEST_TOKEN env var

2. Updated all 12 API endpoints to use shared auth utility

3. Updated playwright.config.js to send X-Test-Token header

4. Removed old auth files (auth.setup.spec.js, auth-check.spec.js)

Token: 46a3c509b682f72fb1398d0b640d3170ef42d15f2844e91c4a94c1f288eb4cad
Add to Vercel + GitHub Secrets as E2E_TEST_TOKEN

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:prod": "PLAYWRIGHT_BASE_URL=https://traffic-dashboard-theta.vercel.app playwright test --grep-invert @local-only",
-    "test:e2e:auth": "PLAYWRIGHT_BASE_URL=https://traffic-dashboard-theta.vercel.app playwright test auth.setup --headed --project=chromium",
+    "test:e2e:prod": "PLAYWRIGHT_BASE_URL=https://traffic-dashboard-theta.vercel.app playwright test",
     "test:all": "npm test && npm run test:e2e",
     "dev": "python3 -m http.server 3000"
   },
